cluster-config/apps/pds.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pds
---
apiVersion: v1
kind: Service
metadata:
  name: pds
  namespace: pds
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: pds-port
      protocol: TCP
      name: pds-port
  selector:
    app: pds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pds
  namespace: pds
  labels:
    app: pds
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: pds
  template:
    metadata:
      labels:
        app: pds
    spec:
      serviceAccountName: pds
      securityContext:
        fsGroup: 2000
      containers:
        - name: bluesky-pds
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "ghcr.io/bluesky-social/pds:0.4.204"
          imagePullPolicy: IfNotPresent
          ports:
            - name: pds-port
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /pds
          livenessProbe:
            httpGet:
              path: /xrpc/_health
              port: pds-port
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: "pds-data"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pds
  namespace: pds
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - nblr.me
    - "*.nblr.me"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: cilium-gateway
  rules:
    - backendRefs:
        - name: pds
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
